changed hammer to modular item, introduced capabilities for crafting

--- a/src/main/resources/assets/tetra/lang/en_US.lang
+++ b/src/main/resources/assets/tetra/lang/en_US.lang
@@ -1,4 +1,7 @@
 item.modular.broken=Broken
+item.modular.tier=Tier
+item.modular.durability=Durability
+
 repair_schema.name=Repair
 repair_schema.description=Repair the item. Materials used are based on what the modules are made of
 
