--- a/src/main/resources/assets/tetra/lang/en_US.lang
+++ b/src/main/resources/assets/tetra/lang/en_US.lang
@@ -1,3 +1,5 @@
+itemGroup.tetra=Tetra
+
 item.modular.broken=Broken
 item.modular.tier=Tier
 item.modular.durability=Durability
@@ -47,4 +49,23 @@ heavy_blade/cobblestone=Solid stone cleaver
 heavy_blade/gold=Excessive ornate blade
 heavy_blade/obsidian=Heavy obsidian blade
 
-itemGroup.tetra=Tetra
+basic_handle_schema.name=Mallet head
+basic_handle_schema.description=Reforge the hammer head into a mallet using the given material. The mallet is useful for upgrading other things.
+basic_handle_schema.slot1=Head material
+
+basic_handle/stick=Wooden handle
+basic_handle/iron=Iron handle
+
+
+basic_head_schema.name=Tool handle
+basic_head_schema.description=Replace the handle for the head. A sturdier handle supports heavier hammer heads.
+basic_head_schema.slot1=Handle material
+
+basic_head/log=Wooden mallet
+basic_head/stone=Stone mallet
+basic_head/iron=Iron mallet
+basic_head/obsidian=Obsidian mallet
+
+item.hammer_basic.name=Wooden mallet
+item.toolbelt.name=Toolbelt
+item.rocket_boots.name=Rocket boots
