toolbelt typo fixes

--- a/src/main/resources/assets/tetra/lang/en_US.lang
+++ b/src/main/resources/assets/tetra/lang/en_US.lang
@@ -236,13 +236,13 @@ strap_schema_1.name=Single belt strap
 strap_schema_1.description=Attach a single strap to the belt, which can be used for carrying and quickly accessing tools or other items.
 strap_schema_1.slot1=Strap material
 strap_schema_2.name=Double belt strap
-strap_schema_2.description=Attach a two straps to the belt, which can be used for carrying and quickly accessing tools or other items.
+strap_schema_2.description=Attach two straps to the belt, which can be used for carrying and quickly accessing tools or other items.
 strap_schema_2.slot1=Strap material
 strap_schema_3.name=Triple belt strap
-strap_schema_3.description=Attach a three straps to the belt, which can be used for carrying and quickly accessing tools or other items.
+strap_schema_3.description=Attach three straps to the belt, which can be used for carrying and quickly accessing tools or other items.
 strap_schema_3.slot1=Strap material
 strap_schema_4.name=Quadruple belt strap
-strap_schema_4.description=Attach a four straps to the belt, which can be used for carrying and quickly accessing tools or other items.
+strap_schema_4.description=Attach four straps to the belt, which can be used for carrying and quickly accessing tools or other items.
 strap_schema_4.slot1=Strap material
 
 strap_1/leather=Leather strap
