changed serrated to not apply to undead, fixed typo

--- a/src/main/resources/assets/tetra/lang/en_US.lang
+++ b/src/main/resources/assets/tetra/lang/en_US.lang
@@ -110,7 +110,7 @@ short_blade/iron.prefix=Iron
 short_blade/iron.name=Dagger
 short_blade/gold=Golden shortblade
 short_blade/gold.prefix=Golden
-short_blade/gold.prefix=Dagger
+short_blade/gold.name=Dagger
 short_blade/prismarine=Prismarine shortblade
 short_blade/prismarine.prefix=Prismarine
 short_blade/prismarine.name=Shanker
@@ -131,7 +131,7 @@ sword/short_blade.serrated.name=Serrated blade %s
 sword/short_blade.serrated.prefix=Serrated
 sword/short_blade.serrated.description=§7Attacks may inflict bleed.
 sword/short_blade.serrated.schema.name=Serrate
-sword/short_blade.serrated.schema.description=Serrates the blade, providing a saw-tooth edged blade. Has a 30% chance to cause the target to bleed for 4 damage over 2 seconds.
+sword/short_blade.serrated.schema.description=Serrates the blade, providing a saw-tooth edged blade. Has a 30% chance to cause the target to bleed for 4 damage over 2 seconds. Not effective against undead.
 
 ###############################
 # HEAVY BLADE
