tweaked module setup to allow modules to fit several slots, changed upgrade "workflow", texture improvements, +-bugs

--- a/src/main/resources/assets/tetra/lang/en_US.lang
+++ b/src/main/resources/assets/tetra/lang/en_US.lang
@@ -1,6 +1,11 @@
 itemGroup.tetra=Tetra
 
 ###############################
+# WORKBENCH
+###############################
+workbench.schema_list.empty=No upgrades available for the selected slot.
+
+###############################
 # MISC
 ###############################
 item.modular.broken=Broken
