added action button for initiating repairs

--- a/src/main/resources/assets/tetra/lang/en_US.lang
+++ b/src/main/resources/assets/tetra/lang/en_US.lang
@@ -4,6 +4,7 @@ itemGroup.tetra=Tetra
 # WORKBENCH
 ###############################
 workbench.schema_list.empty=No upgrades available for the selected slot.
+workbench.repair=Repair
 
 ###############################
 # MISC
