--- a/src/main/resources/assets/tetra/lang/en_US.lang
+++ b/src/main/resources/assets/tetra/lang/en_US.lang
@@ -34,6 +34,36 @@ repair_schema.name=Repair
 repair_schema.description=Repair the item using various materials.
 
 ###############################
+# BOOK ENCHANT SCHEMA
+###############################
+book_enchant.name=Apply enchantment
+book_enchant.description=Apply the enchantments from an enchanted book to the selected part.
+book_enchant.slot1=Enchanted book
+
+###############################
+# ENCHANTS
+###############################
+enchantment/fire_aspect.name=Fire Aspect
+enchantment/fire_aspect.description=Striking entities sets them on fire
+enchantment/looting.name=Looting
+enchantment/looting.description=Increases drops when killing entities
+enchantment/unbreaking.name=Unbreaking
+enchantment/unbreaking.description=Reduces the chance for the item to take damage
+enchantment/sharpness.name=Sharpness
+enchantment/sharpness.description=Increases damage dealt
+enchantment/smite.name=Smite
+enchantment/smite.description=Deal increased damage to undead
+enchantment/bane_of_arthropods.name=Bane of Arthropods
+enchantment/bane_of_arthropods.description=Deal increased damage to arthropods
+enchantment/knockback.name=Knockback
+enchantment/knockback.description=Knock back targets further
+enchantment/mending.name=Mending
+enchantment/mending.description=Repairs durability when gaining experience
+enchantment/sweeping_edge.name=Sweeping Edge
+enchantment/sweeping_edge.description=Increases damage of sweeping strikes
+
+
+###############################
 # BASIC BLADE
 ###############################
 blade_schema.name=Simple blade
@@ -138,23 +168,23 @@ short_blade/prismarine=Prismarine shortblade
 short_blade/prismarine.prefix=Prismarine
 short_blade/prismarine.name=Shanker
 
-sword/short_blade.hooked.name=Hooked blade %s
-sword/short_blade.hooked.prefix=Hooked
-sword/short_blade.hooked.description=§7Striking enemies from behind cause critical damage.
-sword/short_blade.hooked.schema.name=Notch hook
-sword/short_blade.hooked.schema.description=Notch the back side of the blade, providing additional damage when striking unsuspecting enemies. Cause critical strikes when attacking enemies from behind.
+short_blade/hooked.name=Hooked blade
+short_blade/hooked.prefix=Hooked
+short_blade/hooked.description=Striking enemies from behind cause critical damage.
+short_blade/hooked.schema.name=Notch hook
+short_blade/hooked.schema.description=Notch the back side of the blade, providing additional damage when striking unsuspecting enemies. Cause critical strikes when attacking enemies from behind.
 
-sword/short_blade.tempered.name=Tempered point %s
-sword/short_blade.tempered.prefix=Tempered
-sword/short_blade.tempered.description=§7Attacks ignore armor.
-sword/short_blade.tempered.schema.name=Temper
-sword/short_blade.tempered.schema.description=Temper the point of the blade, greatly increasing it's hardness. Causes half of the damage dealt to ignore armor.
+short_blade/tempered.name=Tempered point
+short_blade/tempered.prefix=Tempered
+short_blade/tempered.description=Attacks ignore armor.
+short_blade/tempered.schema.name=Temper
+short_blade/tempered.schema.description=Temper the point of the blade, greatly increasing it's hardness. Causes half of the damage dealt to ignore armor.
 
-sword/short_blade.serrated.name=Serrated blade %s
-sword/short_blade.serrated.prefix=Serrated
-sword/short_blade.serrated.description=§7Attacks may inflict bleed.
-sword/short_blade.serrated.schema.name=Serrate
-sword/short_blade.serrated.schema.description=Serrates the blade, providing a saw-tooth edged blade. Has a 30%% chance to cause the target to bleed for 4 damage over 2 seconds. Not effective against undead.
+short_blade/serrated.name=Serrated blade
+short_blade/serrated.prefix=Serrated
+short_blade/serrated.description=Attacks may inflict bleed.
+short_blade/serrated.schema.name=Serrate
+short_blade/serrated.schema.description=Serrates the blade, providing a saw-tooth edged blade. Has a 30%% chance to cause the target to bleed for 4 damage over 2 seconds. Not effective against undead.
 
 ###############################
 # HEAVY BLADE
